--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,5 +3,6 @@
 @import './base/queries.scss';
 @import './base/app.scss';
 //components
+@import './components/specialist.scss';
 @import './components/header.scss';
 
