--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,6 +1,32 @@
 .header {
-  &__container {
-    height: 32px;
+  @include md-up {
+    padding-left: 16.9vw;
+    padding-right: 7.15vw;
+  }
 
+  &__content {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    line-height: 0;
+    @include xs-only {
+      padding: 5px 0;
+    }
+    @include sm-up {
+      padding: 17px 0;
+    }
+  }
+  &__logo {
+  }
+  &__profile {
+    @include xs-only {
+      margin-right: 40px;
+    }
+    @include sm-only {
+      margin-right: 40px;
+    }
+    margin-right: 101px;
+  }
+  &__theme {
   }
 }
